# csv-bisect-gui

./: .coveragerc  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
csv_bisect_gui/: app.py  bisect_tool.py  scrollbar_frame.py
tests/: test_app.py  test_bisect.py
