[tool.poetry]
name = "csv-bisect-gui"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bidict = "^0.23.1"
tkinter-layout-helpers = "^0.3.0"
alternative-encodings = {version = "^0.3.1", source = "dfint"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
hypothesis = "^6.127.3"
ruff = "^0.9.9"

[[tool.poetry.source]]
name = "dfint"
url = "https://dfint.github.io/pypi-index/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "python -m csv_bisect_gui.app"

[tool.poetry.scripts]
app = "csv_bisect_gui.app:main"

[tool.ruff]
line-length = 120
