[project]
name = "csv-bisect-gui"
version = "0.1.0"
description = ""
authors = [{ name = "insolor", email = "insolor@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "bidict>=0.23.1,<0.24",
    "tkinter-layout-helpers>=0.3.0,<0.4",
    "alternative-encodings>=0.3.1,<0.4",
]

[project.scripts]
app = "csv_bisect_gui.app:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "pytest-cov>=6.2.1,<7",
    "hypothesis>=6.136.6,<7",
    "ruff>=0.12.7,<0.13",
]

[tool.uv]

[[tool.uv.index]]
name = "dfint"
url = "https://dfint.github.io/pypi-index/"
explicit = true

[tool.uv.sources]
alternative-encodings = { index = "dfint" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
run = "python -m csv_bisect_gui.app"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "C408",
    "COM812",
    "D",
    "ISC001",
    "PTH123",
    "PLR2004",
    "ANN002",
    "ANN003",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Don't warn about using of asserts in tests
    "ANN001",
    "ANN201",
    "ANN202",
    "D",  # Don't warn about missing documentation in tests
]
